--- a/Proyecto_F/inicio.html
+++ b/Proyecto_F/inicio.html
@@ -28,6 +28,7 @@
         
     </header>
     <main>
+      <!-slider->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <div id="carousel" class="carousel slide">
             <div class="carousel-indicators">
@@ -55,6 +56,7 @@
               <span class="visually-hidden">Next</span>
             </button>
       </div><br>
+      <!-formulario incio de sseccion->
       <div id="myModal" class="modal">
         <div class="modal-content">
           <span class="close" id="close">&times;</span>
@@ -65,11 +67,11 @@
             <p>Contraseña</p>
             <input type="password" placeholder="Contraseña" required /><br>
             <button>Iniciar</button>
-            <p class="message">¿No estás registrado? <button id="openRegistroModal">Crear cuenta</></p>
+            <p class="message">¿No estás registrado? <button id="openRegistroModal">Crear cuenta</¡-></p>
             </form>
         </div>
     </div>
-
+    <!-formulario Registro->
     <div id="registroModal" class="modal">
         <div class="modal-content">
             <span class="close" id="registroClose">&times;</span>
@@ -85,7 +87,6 @@
         </div>
     </div>
       
-      <main>
         <section id="homb">
         <h4>HOMBRES</h4>
         <div class="container">
