--- a/Proyecto_F/inicio.html
+++ b/Proyecto_F/inicio.html
@@ -6,8 +6,8 @@
     <title>Shoes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"href="./style.css">
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet"href="./css/style.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
     <header>
@@ -261,6 +261,6 @@
     </footer>
     
   </body>
-  <script src="./acciones.js"></script>
+  <script src="./js/acciones.js"></script>
 
 </html>
